--- a/css/common.css
+++ b/css/common.css
@@ -68,6 +68,11 @@ a:hover {
 	margin-bottom: 20px;
 }
 
+.margin-5-5 {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 .margin-top-5 {
 	margin-top: 5px;
 }
@@ -251,8 +256,8 @@ a:hover {
 .customer-logo {
 	padding-top: 20px;
 	display: inline-block;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 7px;
+	padding-right: 7px;
 }
 
 .customer-logo-padding {
@@ -389,4 +394,19 @@ input[type="text"],textarea {
 
 .carousel-fade .carousel-control {
 	z-index: 2;
+}
+
+.row .customer-logo img, .row .customer-logo-padding img {
+	width: 115%;
+	height: 115%;
+}
+
+.success {
+	padding-left: 35px;
+	padding-top: 15px;
+	color: red;
+}
+
+.our-customer {
+	padding-top: 3px;
 }
